--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
-  <body class="text-center jumbotron">
-      <main>
-      <h1>REFRÉN:</h1>
-        <h1>"Hej ty,</h1>
-        <h1>já jsem taky popelář.</h1>
-        <h1>Hej ty,</h1>
-        <h1>kolik toho dneska máš?</h1>
-        <h1>Hej ty,</h1>
-        <h1>já mám dvacet popelnic.</h1>
-        <h1>Hej ty,</h1>
-        <h1>já mám ještě o dvě víc."</h1>
+  <body class="text-center">
+      <header class="jumbotron text-warning text-center bg-dark" style="font-size: 90px">REFRÉN:</header>
+      <main style="font-size: 35px">
+        <p><b>"Hej ty,</b></p>
+        <p><b>já jsem taky popelář.</b></p>
+        <p><b>ty,</b></p>
+        <p><b>kolik toho dneska máš?</b></p>
+        <p><b>Hej ty,</b></p>
+        <p><b>já mám dvacet popelnic.</b></p>
+        <p><b>Hej ty,</b></p>
+        <p><b>já mám ještě o dvě víc."</b></p>
       </main>
 
-        <footer>
+        <footer class=" text-center" style="font-size: 15px">
             <hr>
            <p> &copy; 2019 Viktor Zwinger </p>
         </footer>
